# csye7230

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  get_started_with_llama_stack.md  pyproject.toml
.github/workflows/: epics.yml  python-quality-checks.yml
alembic/: env.py
alembic/versions/: 03e4d5ae503c_updated_dim_of_query_embeddings.py  10dc6a241fe7_updated_created_at_to_datetime_type.py  32ff8a468a38_removed_dim_and_embedding_type_from_.py  5c94d8ddca4b_use_string_for_types_of_created_at_and_.py  88e18284cc13_added_id_to_each___repr___of_each_table.py  91179eff2b40_updated_to_use_halfvec.py  93ce4bceb392_updated_vector_type_to_vector.py  d496c0cb4a5b_made_text_content_binary_content_and_.py  eb81047b04ce_added_last_modified_and_created_at_to_.py  ed87483f811a_cascade_delete_flattened_embeddings_if_.py  fd66d94efc77_added_flattenedembedding_table.py
claude-agent/: README.md  pyproject.toml
claude-agent/claude_agent/: base.py  main.py  tools.py
claude-agent/test/: test_colpali.py
claude_agent/: base.py  tools.py
code-search/: README.md  pyproject.toml
code-search/alembic/: env.py
code-search/alembic/versions/: a341fb646fcd_renamed_querycache_to_search_with_.py  a4cd6bacdccf_testt_2_initial_migration.py  c700a293d9a0_initial_migration.py
code-search/code_search/: main.py
code-search/code_search/database/: model.py  session.py
code-search/code_search/repository/: file_repository.py  search_repository.py
code-search/code_search/services/: file_processor.py  rag.py  search_processor.py
code-search/code_search/tests/: test_config.py
code-search/code_search/tests/api/: test_api.py
code-search/code_search/tests/repository/: tests_file_repository.py
code-search/code_search/tests/service/: test_query_processor.py
colpali-search/: Dockerfile  Makefile  README.md  docker-compose.yml  example.env  init.sql  pyproject.toml
colpali-search/alembic/: env.py
colpali-search/alembic/versions/: 0a23355650fe_initial_migration.py  277d3d51d612_initial_migration.py  69bfe9085ecf_added_indexingstrategy_table.py  cc78dcc35341_initial_migration.py
colpali-search/colpali_search/: app.py  config.py  context.py  custom_types.py  database.py  dependencies.py  main.py  models.py  seed_user.py  types.py  utils.py
colpali-search/colpali_search/repository/: base_repository.py  repositories.py
colpali-search/colpali_search/routers/: embeddings.py  files.py  index.py
colpali-search/colpali_search/schemas/: common.py
colpali-search/colpali_search/schemas/endpoints/: __init__.py  benchmark.py  embeddings.py  file.py  index.py  search.py
colpali-search/colpali_search/schemas/internal/: pdf.py
colpali-search/colpali_search/services/: benchmark_service.py  embedding_service.py  file_service.py  indexing_service.py  model_service.py  pdf_conversion_service.py  pdf_images_dataset.py  search_service.py
colpali-search/colpali_search/services/search_engine/: __init__.py  context.py  distance_metrics.py  indexing_strategies.py  search_strategies.py  strategy_factory.py
colpali-search/tests/api/: conftest.py  test_api.py
colpali-search/tests/invalid_files/: LICENSE.txt
colpali-search/tests/repository/: conftest.py  test_repositories.py  test_sqlalchemy.py
data/synthetic_testdata/: cvpr2019_5papers_testset_12q.csv  m-ric~huggingface_doc_347.csv
eval_output/: evaluation_results.csv  rag_chunk:200_embeddings:thenlper~gte-small_rerank:colbert-ir~colbertv2.0_reader-model:llama3.1:8b-instruct-fp16.json
examples/: colpali_search.py
frontend/searchagent_web_app/: package-lock.json  package.json  tailwind.config.ts
frontend/searchagent_web_app/components/: app-sidebar.tsx
performance_analysis/: experiments.md
performance_analysis/cache_hit_ratio/: cache_hit_ratio.pgsql
performance_analysis/high_level_io_activity/: high_level_io_activity.pgsql
performance_analysis/high_memory_usage/: high_memory_usage.pgsql
performance_analysis/most_time_consuming_queries/: most_time_consuming_queries.pgsql
performance_logs/: 2024-11-04_23-52-01.json  2024-11-15_13-31-36.json  2024-11-17_14-46-59.json
searchagent/: config.py  db_connection.py  models.py  run_eval.py  seed_user.py  utils.py
searchagent/agents/: README.md  api.py  app_context.py  factory.py  run.py
searchagent/agents/common/: client_utils.py  (+6 more)
searchagent/bi_encoder/: search.py
searchagent/colpali/: README.md  base.py  colpali_strategy.py  pdf_images_dataset.py  pdf_images_processor.py  profiler.py  schema.py  schemas.py  service.py
searchagent/eval/: benchmark_rag.py  config_models.py  evaluate.py  main.ipynb  ragas_evaluate.py  utils.py
searchagent/file_system/: base.py  models.py
searchagent/ragmetrics/: metrics.py  performance_logger.py
searchagent/sync_manager/: base.py  db.py  file_change_detector.py
tests/colpali/: test_embed.py  test_search.py
tests/file_system/: test_recursive_retrieval.py
(+42 files in other folders)
