[tool.poetry]
name = "csye7230"
version = "0.1.0"
description = "search2.0"
authors = ["Frieda (Jingying) Huang <jingyingfhuang@gmail.com>"]
readme = "README.md"
packages = [{include = "searchagent"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pre-commit = "^3.8.0"
ruff = "^0.6.5"
ragas = "^0.1.18"
pydantic = "^2.9.2"
loguru = "^0.7.2"
pyyaml = "^6.0.2"
unstructured = {extras = ["pdf"], version = "^0.15.12"}
langchain = "0.2.11"
langchain-ollama = "0.1.3"
langchain-huggingface = "0.0.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
